Feat(Validador): Modulo validador interno
