# backend/app/Models/Ticket.php
@@ -4,6 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasOne;
 
 class Ticket extends Model
 {
@@ -56,5 +57,10 @@ class Ticket extends Model
     public function ticketPlantilla(): BelongsTo
     {
         return $this->belongsTo(TicketPlantilla::class);
+    }
+
+    public function validacion(): HasOne
+    {
+        return $this->hasOne(Validacion::class);
     }
 }
